# 278_Lab1

./: CMakeLists.txt  WALKPTRN.C  linkedListlib.c  linkedlist.c  makenums.c  pointers.cpp  rdchrbychr.c  readnumsv2.c  readnumsv3.c  readnumsv4.c  readnumsv5.c  readnumsv6.c  readtextv1.c  readtextv2.c  readtextv3.c  textfile.txt
