cmake_minimum_required(VERSION 3.23)
project(278_Codebase)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(makenums makenums.c)
add_executable(rdchrbychr rdchrbychr.c)
add_executable(readnumsv2 readnumsv2.c)
add_executable(readnumsv3 readnumsv3.c)
add_executable(readnumsv4 readnumsv4.c)
add_executable(readnumsv5 readnumsv5.c)
add_executable(readtextv1 readtextv1.c)
add_executable(readtextv2 readtextv2.c)
add_executable(readtextv3 readtextv3.c)
add_executable(WALKPTRN WALKPTRN.C)
add_executable(pointers pointers.cpp)
add_executable(linkedlist linkedlist.c)
add_executable(linkedListlib linkedListlib.c)
add_executable(readnumsv6 readnumsv6.c)